1.8.5 (28.08.2017):

* + support for Poppler (pdftops) as postscript backend.
* - support for libsane-perl
* Update to Hungarian translation (thanks to csola)


1.8.4 (28.07.2017):

* Cope with Tesseract 3.0.5 writing Page 1 instead of Page 0
  Thanks to Chris Mayo for the patch. Closes merge request #14
* Assume pixels/inch if the image doesn't know better. Closes bug #258
  (Tesseract 3.05.01: Warning. Invalid resolution 0 dpi. Using 70 instead)
* Fix paragraph formatting in save as text output.
  Thanks to Chris Mayo for the patch. Closes merge request #16
* In preparation for future removal of libsane-perl frontend, change default
  frontend libsane-perl -> libimage-sane-perl, and similarly switch selected
  frontend on upgrade from older version. Assuming no major problems occur,
  support for libsane-perl will be removed in the next release.
* Fixed bug writing postscript file.
* + support for ghostscript backend due to apparent bug in tiff2ps.
* Round scan options with ranges to valid values before applying.
* Fixed bug updating list of option-dependent values. Closes bug #264
  (Effective resolution is 75 DPI despite selecting 600 or 1200).


1.8.3 (01.07.2017):

* + libimage-sane-perl frontend
  - scanimage-perl and scanadf-perl frontends
  Closes bug #219 (Rescan for devices not working properly).
* Fixed bug writing multipage hOCR files.
* Fixed bug switching between Tesseract and Cuneiform (particularly for German).


1.8.2 (01.06.2017):

* Don't ignore warnings from unpaper
* Fix OCR being ghosted when Tesseract is installed.
  Thanks to Chris Mayo for the patch. Closes merge request 13
* + support for scanimage v1.0.27


1.8.1 (27.05.2017):

* Consistently ghost OCR and unpaper tools if the appropriate executables are
  not available. Closes bug #151 (Unpaper detection is not handled correctly).
* Fixed display of tesseract error messages, broken by commit
  "Gscan2pdf::Tesseract: support output to stdout instead of temporary file"