@@ -338,8 +338,8 @@ $signal = $dialog->signal_connect(
                     $dialog->get('current-scan-options')->get_data,
                     {
                         backend => [
-                            { $resolution => 52 },
                             { mode        => 'Color' },
+                            { $resolution => 52 },
                             { $brx        => 11 }
                         ],
                         'frontend' => { 'num_pages' => 0 }
