@@ -3,6 +3,8 @@
 * + support for Poppler (pdftops) as postscript backend.
 * - support for libsane-perl
 * Update to Hungarian translation (thanks to csola)
+* Reapply current scan settings for those scanners that reset them when forcing
+  a reload
 
 
 1.8.4 (28.07.2017):
